--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <link rel="stylesheet" href="src/styles.css" />
-        <script src="src/app.js" type="module"></script>
+        <meta charset="utf-8" />
+        <title>My First Parcel App</title>
+        <link rel="stylesheet" href="src/style.css" />
+        <script type="module" src="src/app.js"></script>
     </head>
     <body class="container mx-auto bg-slate-300">
-        <h1 class="text-2xl text-center">My favorite locations</h1>
+        <h1 class="text-2xl text-center text-red-500">
+            My favourite locations
+        </h1>
         <div id="map" class="h-[80vh]"></div>
     </body>
 </html>
